--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@bumaga/tabs": "^0.2.0",
+    "formik": "^2.2.9",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "prettier": "2.3.2",
     "vite": "^2.4.4"
   }
 }
