--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.2.9",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
